[metadata]
name = m3u-helper-icexmoon
version = 0.0.1
author = icexmoon
author_email = icexmoon@qq.com
description = Format m3u file according to the Chinese custom.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icexmoon/m3u-helper
project_urls =
    Bug Tracker = https://github.com/icexmoon/m3u-helper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    m3u8
    tqdm
    requests

[options.package_data]
* = *.info

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymh = m3u_helper.__main__:main